--- a/world/roctracer/PKGBUILD
+++ b/world/roctracer/PKGBUILD
@@ -1,17 +1,17 @@
 # Maintainer: Torsten Keßler <tpkessler at archlinux dot org>
 # Contributor: acxz <akashpatel2008 at yahoo dot com>
 pkgname=roctracer
-pkgver=6.0.2
+pkgver=6.3.3
 pkgrel=1
 pkgdesc='ROCm tracer library for performance tracing'
 arch=('x86_64')
 url='https://rocm.docs.amd.com/projects/roctracer/en/latest'
 license=('MIT')
-depends=('rocm-core' 'glibc' 'gcc-libs' 'hip' 'hsa-rocr' 'comgr')
+depends=('rocm-core' 'glibc' 'gcc-libs' 'hip-runtime-amd' 'hsa-rocr' 'comgr')
 makedepends=('cmake' 'python-cppheaderparser' 'python-ply')
 _git='https://github.com/ROCm/roctracer'
 source=("$pkgname-$pkgver.tar.gz::$_git/archive/refs/tags/rocm-$pkgver.tar.gz")
-sha256sums=('1e0105b32fdd9c010aab304bb2ca1a5a38ba323cea610afe1135657edda8f26e')
+sha256sums=('0d03ebd058291d584be6bf8b114292c666a799b0fd23c697e1c6cb2b6d43f990')
 options=('!lto')
 _dirname="$(basename "$_git")-$(basename "${source[0]}" ".tar.gz")"
 
