--- a/world/python-redis/.artixlinux/pkgbase.yaml
+++ b/world/python-redis/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: python-redis
-  version: 5.2.1-2.1
+  version: 5.2.1-4
   arch:
     - any
   pkgname:
     - python-redis
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 5.2.1-2.1
+    version: 5.2.1-4
     packages:
-      - python-redis-5.2.1-2.1-any.pkg.tar.zst
+      - python-redis-5.2.1-4-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
