--- a/world/mailman3/PKGBUILD
+++ b/world/mailman3/PKGBUILD
@@ -3,7 +3,7 @@
 _name=mailman
 pkgname=mailman3
 pkgver=3.3.10
-pkgrel=4
+pkgrel=5
 pkgdesc="The GNU mailing list manager"
 arch=(any)
 url="https://www.list.org/"
@@ -60,13 +60,16 @@ replaces=(mailman-core)
 backup=(etc/mailman.cfg)
 source=(
   $pkgname::git+https://gitlab.com/$_name/$_name?signed#tag=v$pkgver
+  $pkgname-3.3.10-stop-modifying-cc-header.patch
   $pkgname.sysusers
   $pkgname.tmpfiles
 )
 sha512sums=('923ae08b99657bf0ea626afc81e97e96e9ccc5b437a9f71a0d91549a3eac2544dfcb60c5a89ce22f2ce251c1a9bcbff6743610ad137d33ace9b4a06999739ce3'
+            '63f636acc93cf9605db16e92e6bb6836075109ae746953cbed40a64758cb6b2802d3e8948deac512d7cccc2cd4bd793f53da9477fc23d666860bc793058cb07d'
             '074cf58a93204d4b7631c4cc8af62d5720560301c6fefef6baa5d3aa33e72720870757fac7803f7b2835f8f02bb776f9d049df5c7528c743b56dda7da2085b07'
             '6f4b51fd5eb34ac974b3312c34eb1437d9435cfd50f0cb89db02b94ce514bceca2c6dc7cb172b79b2d6a23d68e7ea391ec58dbd9899938c0fe88c03c67c521b9')
 b2sums=('513404b857ee26d19f8f4c3883cf9eb9d1494377f4c33b88302b7d5ec9f522901481ee0137a036bac2adbee88c66a866757495774a3fe8e388eba7fec50f000e'
+        '2faa6486e6cd040e442378c377a316ebfc691ab3d209ac6f3c949693b8af51834fcb78086c403c5516874530d15b0fabe5adba8e3011673bba21f5b93b5d5437'
         '594d6a6712f9e817f4d935225d3a1d87c96e23f1e449caab6bfb00ce2a0421af1401505c6d1d280a03f8c551136639f0dabf27d8b549ca4ea26bdb3febdda660'
         '461dce577696405011ed89f7fc109caaf27f4183b4d315baa8ad03db0f12015ebc447cbe9c0b8c5bcba38b63fcaf45adcfcb3e5bf5afb7eb0bd87a2e1b0301e5')
 validpgpkeys=('541EA0448453394FF77A0ECC9D9B2BA061D0A67C') # Abhilash Raj <maxking@asynchronous.in>
@@ -79,6 +82,8 @@ prepare() {
   sed -e 's|/var/tmp/mailman|/var/lib/mailman|g' -i src/$_name/config/schema.cfg
   # fix use of PosixPath with >= Python 3.13: https://gitlab.com/mailman/mailman/-/merge_requests/1309
   git cherry-pick -n 685d9a7bdbd382d9e8d4a2da74bd973e93356e05
+  # stop modifying the CC header as it breaks DKIM: https://gitlab.com/mailman/mailman/-/merge_requests/1039
+  git apply ../$pkgname-3.3.10-stop-modifying-cc-header.patch
 }
 
 build() {
