--- a/world/blinken/PKGBUILD
+++ b/world/blinken/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=blinken
-pkgver=24.12.3
+pkgver=25.04.0
 pkgrel=1
 pkgdesc='Memory Enhancement Game'
 url='https://apps.kde.org/blinken/'
@@ -19,15 +19,15 @@ depends=(gcc-libs
          kguiaddons
          ki18n
          kxmlgui
-         phonon-qt6
          qt6-base
+         qt6-multimedia
          qt6-svg)
 makedepends=(extra-cmake-modules
              kdoctools)
 groups=(kde-applications
         kde-education)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('7aa16691f9328a71fef43888ca88e5efdf42baf1ff69a9e977a9d0eed3ec473e'
+sha256sums=('7f9e1d8ccc4920e499d4632be88ba7193f50d8db74379df6f0b9a30561b4a0e3'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
