--- a/world/bomber/PKGBUILD
+++ b/world/bomber/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=bomber
-pkgver=24.12.3
+pkgver=25.04.0
 pkgrel=1
 pkgdesc='A single player arcade game'
 url='https://apps.kde.org/bomber/'
@@ -18,6 +18,7 @@ depends=(gcc-libs
          kcrash
          kdbusaddons
          ki18n
+         kiconthemes
          kwidgetsaddons
          kxmlgui
          libkdegames
@@ -27,7 +28,7 @@ makedepends=(extra-cmake-modules
 groups=(kde-applications
         kde-games)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('d04a8131a257d96e3d9357579906eef973387c8719f82e6c5a0db2885ae5940e'
+sha256sums=('1e63922a320420edeca22b6868b4a9fda548332f441774e5502ead86ab798ce8'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
