--- a/world/bovo/PKGBUILD
+++ b/world/bovo/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=bovo
-pkgver=24.12.3
+pkgver=25.04.0
 pkgrel=1
 pkgdesc='A Gomoku like game for two players'
 url='https://apps.kde.org/bovo/'
@@ -13,9 +13,11 @@ license=(GPL-2.0-or-later LGPL-2.0-or-later)
 depends=(gcc-libs
          glibc
          kconfig
+         kconfigwidgets
          kcoreaddons
          kcrash
          kdbusaddons
+         kiconthemes
          ki18n
          kwidgetsaddons
          kxmlgui
@@ -27,7 +29,7 @@ makedepends=(extra-cmake-modules
 groups=(kde-applications
         kde-games)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('95b422c700db53d07985ce6044ad2d0aea388f95a6a2e8bdc679d2cfd595c4bb'
+sha256sums=('a5e52ec7f45a18aa6b8d41764aae5aabbfc90e9040c356185247c377474bbde5'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
