--- a/world/elisa/PKGBUILD
+++ b/world/elisa/PKGBUILD
@@ -2,7 +2,7 @@
 # Contributor: Antonio Rojas <arojas@archlinux.org>
 
 pkgname=elisa
-pkgver=24.12.3
+pkgver=25.04.0
 pkgrel=1
 pkgdesc='A simple music player aiming to provide a nice experience for its users'
 url='https://apps.kde.org/elisa/'
@@ -10,6 +10,7 @@ arch=(x86_64)
 license=(LGPL-2.0-or-later)
 depends=(gcc-libs
          glibc
+         kcodecs
          kcolorscheme
          kconfig
          kcoreaddons
@@ -33,7 +34,7 @@ makedepends=(extra-cmake-modules
 groups=(kde-applications
         kde-multimedia)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('5d19ab3db41cb2133ac5198f686db49e82b2228e80a3d6f425e04f244588ffc3'
+sha256sums=('96499190370f78e07b3ad21d94d924d021dd17c4bf598b21d01bf02a2a7496af'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
