--- a/world/falkon/.artixlinux/pkgbase.yaml
+++ b/world/falkon/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: falkon
-  version: 24.12.3-3
+  version: 25.04.0-1
   arch:
     - x86_64
   pkgname:
     - falkon
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 24.12.3-3
+    version: 25.04.0-1
     packages:
-      - falkon-24.12.3-3-x86_64.pkg.tar.zst
+      - falkon-25.04.0-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
