--- a/world/granatier/PKGBUILD
+++ b/world/granatier/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=granatier
-pkgver=24.12.3
+pkgver=25.04.0
 pkgrel=1
 pkgdesc='A clone of the classic Bomberman game'
 url='https://apps.kde.org/granatier/'
@@ -18,6 +18,7 @@ depends=(gcc-libs
          kcrash
          kdbusaddons
          ki18n
+         kiconthemes
          kwidgetsaddons
          kxmlgui
          libkdegames
@@ -28,7 +29,7 @@ makedepends=(extra-cmake-modules
 groups=(kde-applications
         kde-games)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('ccf307af184561967f60d899906d98c740fbfd301a34ff31dce4a1800d3fb0f6'
+sha256sums=('6f1b7bc07edd1016fb5efb2dab11725db2676695427829d2bbc04dfe502212cd'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
