--- a/world/kaddressbook/PKGBUILD
+++ b/world/kaddressbook/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Felix Yan <felixonmars@archlinux.org>
 
 pkgname=kaddressbook
-pkgver=24.12.3
+pkgver=25.04.0
 pkgrel=1
 pkgdesc='KDE contact manager'
 arch=(x86_64)
@@ -25,6 +25,7 @@ depends=(akonadi-contacts
          ki18n
          kiconthemes
          kitemmodels
+         kldap
          kontactinterface
          kparts
          kuserfeedback
@@ -39,7 +40,7 @@ makedepends=(extra-cmake-modules
 groups=(kde-applications
         kde-pim)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('fa0e4d75f2e7bf9c2e373547032ab43b8a9b6b09469dc9735966476b87588490'
+sha256sums=('d07ade7ff926d077af7f797eadf04f51f597c73a6f436a70907c58cbd6ea2615'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
