--- a/world/kalarm/PKGBUILD
+++ b/world/kalarm/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Felix Yan <felixonmars@archlinux.org>
 
 pkgname=kalarm
-pkgver=24.12.3
+pkgver=25.04.0
 pkgrel=1
 pkgdesc='Personal alarm scheduler'
 arch=(x86_64)
@@ -44,15 +44,18 @@ depends=(akonadi-contacts
          kwindowsystem
          kxmlgui
          libakonadi
-         qt6-base
-         vlc)
+         qt6-base)
 makedepends=(extra-cmake-modules
-             kdoctools)
-optdepends=('akonadi: birthday import, email functions, email address book')
+             kdoctools
+             mpv
+             vlc)
+optdepends=('akonadi: birthday import, email functions, email address book'
+            'mpv: MPV audio backend'
+            'vlc: VLC audio backend')
 groups=(kde-applications
         kde-pim)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('0a5ac651a95f632595c662d570676643995a73a55fa87810ba8ef392559cbe91'
+sha256sums=('bf5675423f080235c22309f448e4dfb6d4a1baaa8c60cbfa6326b558516e3e92'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
