--- a/world/kapptemplate/PKGBUILD
+++ b/world/kapptemplate/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kapptemplate
-pkgver=24.12.3
+pkgver=25.04.0
 pkgrel=1
 pkgdesc='KDE Template Generator'
 url='https://apps.kde.org/kapptemplate/'
@@ -14,21 +14,20 @@ depends=(gcc-libs
          glibc
          karchive
          kconfig
+         kconfigwidgets
          kcoreaddons
          ki18n
+         kiconthemes
          kirigami
          kirigami-addons
          qt6-base
          qt6-declarative)
 makedepends=(extra-cmake-modules
-             kcompletion
-             kconfigwidgets
-             kdoctools
-             kio)
+             kdoctools)
 groups=(kde-applications
         kde-sdk)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('ff65e9192d450009a5b73c0e93247329c91d1c40b4ca7fad905193ff3802500d'
+sha256sums=('0ff1dbf8a3189283a8f8781d968a2ea96d9734ad38e5312ded6017fa5530c3cc'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
