--- a/world/kasts/.artixlinux/pkgbase.yaml
+++ b/world/kasts/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: kasts
-  version: 24.12.3-2
+  version: 25.04.0-1
   arch:
     - x86_64
   pkgname:
     - kasts
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 24.12.3-2
+    version: 25.04.0-1
     packages:
-      - kasts-24.12.3-2-x86_64.pkg.tar.zst
+      - kasts-25.04.0-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
