--- a/world/kasts/PKGBUILD
+++ b/world/kasts/PKGBUILD
@@ -2,21 +2,25 @@
 # Contributor: Antonio Rojas <arojas@archlinux.org>
 
 pkgname=kasts
-pkgver=24.12.3
-pkgrel=2
+pkgver=25.04.0
+pkgrel=1
 pkgdesc='Kirigami-based podcast player'
 url='https://apps.kde.org/kasts/'
 arch=(x86_64)
 license=(GPL-2.0-or-later LGPL-2.0-or-later)
-depends=(gcc-libs
+depends=(breeze-icons
+         gcc-libs
          glibc
          kcolorscheme
          kconfig
          kcoreaddons
          kcrash
+         kdbusaddons
          ki18n
+         kiconthemes
          kirigami
          kirigami-addons
+         kwindowsystem
          qqc2-desktop-style
          qt6-base
          qt6-declarative
@@ -30,18 +34,12 @@ makedepends=(extra-cmake-modules
              python)
 groups=(kde-applications
         kde-multimedia)
-source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig}
-        https://invent.kde.org/multimedia/kasts/-/commit/39340fc3.patch)
-sha256sums=('45351ce35d2188e732544cc14b48d3589dfe5e5206884502e9695f5bdee37570'
-            'SKIP'
-            'bc0ece75a7bef0d542b6b4abbbcbbd583bc119d453739408154745818f4a6d49')
+source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
+sha256sums=('49e0983cf70d17e1771255c0321d74602c54e28cf7d14d3143286d9a22c898fe'
+            'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
-
-prepare() {
-  patch -d $pkgname-$pkgver -p1 < 39340fc3.patch # Backport kirigami 6.12 fixes
-}
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
