--- a/world/kblocks/PKGBUILD
+++ b/world/kblocks/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kblocks
-pkgver=24.12.3
+pkgver=25.04.0
 pkgrel=1
 pkgdesc='The classic falling blocks game'
 url='https://apps.kde.org/kblocks/'
@@ -18,6 +18,7 @@ depends=(gcc-libs
          kcrash
          kdbusaddons
          ki18n
+         kiconthemes
          kwidgetsaddons
          kxmlgui
          libkdegames
@@ -28,7 +29,7 @@ makedepends=(extra-cmake-modules
 groups=(kde-applications
         kde-games)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('d8cb4635e812bf9a95e88af88a1c3cbc9647f08d66e4dc01c8e22f8439e95787'
+sha256sums=('0ca4761d616a3637eb8b536d2ff581b3b359cdb7b629c85f6ccfa41ea7be5159'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
