--- a/world/kbounce/PKGBUILD
+++ b/world/kbounce/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kbounce
-pkgver=24.12.3
+pkgver=25.04.0
 pkgrel=1
 pkgdesc='A single player arcade game with the elements of puzzle'
 url='https://apps.kde.org/kbounce/'
@@ -20,6 +20,7 @@ depends=(gcc-libs
          kcrash
          kdbusaddons
          ki18n
+         kiconthemes
          kio
          kwidgetsaddons
          kxmlgui
@@ -31,7 +32,7 @@ makedepends=(extra-cmake-modules
 groups=(kde-applications
         kde-games)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('7db2eec46de891771abc7bac2d0e2a4419ad871a7559177b75f199d897c5de52'
+sha256sums=('12458149d36048d4387ac274a3a813d051c14415e9b7ac464e76121189e5b9cd'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
