--- a/world/kbreakout/PKGBUILD
+++ b/world/kbreakout/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kbreakout
-pkgver=24.12.3
+pkgver=25.04.0
 pkgrel=1
 pkgdesc='A Breakout-like game'
 url='https://apps.kde.org/kbreakout/'
@@ -18,6 +18,7 @@ depends=(gcc-libs
          kcrash
          kdbusaddons
          ki18n
+         kiconthemes
          kwidgetsaddons
          kxmlgui
          libkdegames
@@ -28,7 +29,7 @@ makedepends=(extra-cmake-modules
 groups=(kde-applications
         kde-games)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('1e395812ff872f5797b318edf195e172b758ff2ad286c7cb9d07a37e17e0fe4b'
+sha256sums=('2071cb79de4ec7379fbb0dbbfc9fdcaea641f58fe154d1626fe038aecef60b03'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
