--- a/world/kdepim-addons/PKGBUILD
+++ b/world/kdepim-addons/PKGBUILD
@@ -2,7 +2,7 @@
 # Contributor: Antonio Rojas <arojas@archlinux.org>
 
 pkgname=kdepim-addons
-pkgver=24.12.3
+pkgver=25.04.0
 pkgrel=1
 pkgdesc='Addons for KDE PIM applications'
 arch=(x86_64)
@@ -41,6 +41,7 @@ depends=(akonadi-calendar
          kitemmodels
          kitemviews
          kitinerary
+         kldap
          kmailtransport
          kmime
          kpimtextedit
@@ -73,7 +74,7 @@ makedepends=(corrosion
 groups=(kde-applications
         kde-pim)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('0ab482e5725d02c702ba65a3a41c7ee774b1e621cedb84734d8a8fbea41f97d9'
+sha256sums=('a1dc706cba1e83687b804554bc341db678a71d80540364ae13d0f6c42f0736e1'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
