--- a/world/kfourinline/PKGBUILD
+++ b/world/kfourinline/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kfourinline
-pkgver=24.12.3
+pkgver=25.04.0
 pkgrel=1
 pkgdesc='A four-in-a-row game'
 url='https://apps.kde.org/kfourinline/'
@@ -19,6 +19,7 @@ depends=(gcc-libs
          kdbusaddons
          kdnssd
          ki18n
+         kiconthemes
          kwidgetsaddons
          kxmlgui
          libkdegames
@@ -29,7 +30,7 @@ makedepends=(extra-cmake-modules
 groups=(kde-applications
         kde-games)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('53af55dff09824169cb5e794f22cdfddf0d217a2ef4684d0859f09768629b52f'
+sha256sums=('149ea2a60af524ab779c97662bec0d546ee00116339a57f922b6c1b5956c8d15'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
